@@ -18,6 +18,7 @@ Bugs fixed:
 - 2945277 SFCB crashes on subscription without filter or handler prop
 - 2946106 possible race condition initializing providers
 - 2931327 sblim-sfcb-1.3.6 tarball is incomplete
+- 2946885 BEAM errors found in cimXmlGen
 
 Changes in 1.3.6
 ================
