@@ -1,3 +1,8 @@
+2010-02-05  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* cimXmlGen.c:
+	[ 2946885 ] BEAM errors found in cimXmlGen
+
 2010-02-04 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* Makefile.am:
